add massage_type field and get massage_types endpoint
